--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     #canvas {
         position: absolute;
         top: 0;
-        background-color: powderblue;
+        background-color: black;
         border-top: 35px solid gray;
         border-right: 25px solid darkgrey;
         border-bottom: 25px solid lightgray;
